--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 
 ###> symfony/framework-bundle ###
 /.idea/
-/.env*
+/.env.local
 /config/secrets/prod/prod.decrypt.private.php
 /public/bundles/
 /var/
